[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab<5.0.0,>=4.2.0",
]

[tool.pdm.build]
includes = ["kaiwa_subnet"]
[project]
name = "kaiwa-subnet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kaiwadev", email = "hi@kaiwa.dev"},
]
dependencies = [
    "pydantic<3.0.0,>=2.6.4",
    "pydantic-settings<3.0.0,>=2.2.1",
    "typer<1.0.0,>=0.9.0",
    "rich<14.0.0,>=13.7.0",
    "fastapi<1.0.0,>=0.110.0",
    "uvicorn<1.0.0,>=0.29.0",
    "keylimiter<1.0.0,>=0.1.5",
    "communex<1.0.0.0,>=0.1.31.2",
    "httpx<1.0.0,>=0.27.0",
    "datasets<3.0.0,>=2.19.0",
    "loguru<1.0.0,>=0.7.2",
    "supervisor<5.0.0,>=4.2.5",
    "pylint<4.0.0,>=3.1.0",
    "attrs<24.0.0,>=23.2.0",
    "torch==2.3.0",
    "xformers==0.0.26.post1",
    "vllm==0.5.0",
    "autoawq>=0.2.5",
    "sentence-transformers>=3.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/torch/"
verify_ssl = true
name = "torch"
include_packages = ["torch"]
type = "find_links"
